# lcms2-cmake

./: CMakeLists.txt  README.md
tests/: CMakeLists.txt  srgb2xyz.cpp
